# mc-chatlink

./: README.md  chatlink.js  chatlink.py  main.py  pyproject.toml
chat_services/: Discord.py  IRC.py  Minecraft.py  console.py
